src/tone-lang-grammar.pegjs
// src/tone-lang-grammar.pegjs
// ToneLang v1.0 PEG Grammar

// Entry point
start
  = _ content:multiVoiceOrSingleVoice _ { return content; }

multiVoiceOrSingleVoice
  = voices:voiceList { return voices.length === 1 ? voices[0] : voices; }

voiceList
  = head:voice tail:(_ ";" _ voice)* {
      return [head, ...tail.map(t => t[3])];
    }

voice
  = elements:sequence { return elements; }

sequence
  = head:element tail:(WS element)* {
      return [head, ...tail.map(t => t[1])];
    }

element
  = repetition
  / chord
  / note
  / rest

repetition
  = "(" _ elements:sequence _ ")" multiplier:repetitionMultiplier? {
      return { 
        type: "repetition", 
        content: elements,
        repeat: multiplier ?? 1
      };
    }

repetitionMultiplier
  = "*" count:unsignedInteger {
      return count;
    }

// For the note rule
note
  = pitch:pitch velocity:velocity? duration:duration? timeUntilNext:timeUntilNext? multiplier:repetitionMultiplier? {
      return multiplier 
        ? { 
            type: "repetition", 
            content: [{ 
              type: "note", 
              pitch: pitch.pitch,
              name: pitch.name,
              velocity, 
              duration,
              timeUntilNext,
            }],
            repeat: multiplier
          }
        : { 
            type: "note", 
            pitch: pitch.pitch,
            name: pitch.name,
            velocity, 
            duration,
            timeUntilNext,
          };
    }

// For the chord rule
chord
  = "[" _ head:note tail:(WS note)* _ "]" velocity:velocity? duration:duration? timeUntilNext:timeUntilNext? multiplier:repetitionMultiplier? {
      const chord = { 
        type: "chord", 
        notes: [head, ...tail.map(t => t[1])], 
        velocity,
        duration,
        timeUntilNext,
      };
      return multiplier 
        ? { 
            type: "repetition", 
            content: [chord],
            repeat: multiplier
          }
        : chord;
    }

rest
  = "R" duration:absoluteDuration? multiplier:repetitionMultiplier? {
      const rest = { 
        type: "rest", 
        duration: duration,
      };
      return multiplier 
        ? { 
            type: "repetition", 
            content: [rest],
            repeat: multiplier
          }
        : rest;
    }

pitch
  = pitchClass:pitchClass octave:signedInteger {
      const name = `${pitchClass.name}${octave}`;
      const pitch = (octave + 2) * 12 + pitchClass.value;
      if (pitch < 0 || pitch > 127) throw new Error(`MIDI pitch ${pitch} (${name}) outside valid range 0-127`);
      return {pitch, name};
    }

pitchClass
  = pc:("C#" / "Db" / "D#" / "Eb" / "F#" / "Gb" / "G#" / "Ab" / "A#" / "Bb" / "B#" / "Cb" / 
        "C" / "D" / "E" / "F" / "G" / "A" / "B") {
      const values = {
        "C": 0,
        "C#": 1, "Db": 1,
        "D": 2,
        "D#": 3, "Eb": 3,
        "E": 4, "Fb": 4,
        "F": 5, "E#": 5,
        "F#": 6, "Gb": 6,
        "G": 7,
        "G#": 8, "Ab": 8,
        "A": 9,
        "A#": 10, "Bb": 10,
        "B": 11
      };
      return { name: pc, value: values[pc] };
    }

velocity
  = "v" num:[0-9]+ {
      const val = parseInt(num.join(""), 10);
      if (val < 0 || val > 127) {
        throw new Error("Velocity out of range (0–127)");
      }
      return val;
    }

absoluteDuration
  = num:[0-9]+ decimal:("." [0-9]+)? {
      const numStr = num.join("") + (decimal ? decimal[0] + decimal[1].join("") : "");
      return Number.parseFloat(numStr);
    }
  / "." decimal:[0-9]+ {
      return Number.parseFloat("0." + decimal.join(""));
    }

duration
  = "n" duration:absoluteDuration? {
      return duration;
    }

timeUntilNext
  = "t" duration:absoluteDuration? {
      return duration;
    }

unsignedInteger
 = [0-9]+ { return Number.parseInt(text()); }

signedInteger
  = "-"? [0-9]+ { return Number.parseInt(text()); }

// Whitespace
WS = [ \t\r\n]+ // required
_ = [ \t\r\n]*  // optional
